# cat_recognition

./: .gitignore  CMakeLists.txt  README.md  config.yml
data/: feature.csv
include/: calculation.h  local_feature.h
modules/resnet/: CMakeLists.txt  resnet_pt.cpp  resnet_pt.h
modules/yolov5/: yolov5_onnx.cpp  yolov5_onnx.h
src/: example.cpp  main.cpp
tools/: resnet-rm-fc.py
tools/UI-Tools/: UI-Tools.pro  common.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
